# learn-wgpu

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  shell.nix
assets/: shader.wgsl  shader2.wgsl
assets/cubemaps/: desc.yml
src/: byteops.rs  data.rs  ext.rs  input.rs  instance.rs  lib.rs  light.rs  log.rs  main.rs  model.rs  res.rs  state.rs  texture.rs  texture_array.rs  time.rs  vertex.rs  world.rs
src/exts/: mod.rs  state.rs
src/geom/: camera.rs
