[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]

winit = "0.26.1"
wgpu = "0.13.1"
raw-window-handle = "0.4.0"

# tool
image = "0.24.3"
bytemuck = { version = "1.11.0", features = ["derive"] }
na = { version = "0.31.1", features = ["bytemuck"], package = "nalgebra" }
once_cell = "1.13.0"
dashmap = "5.3.4"
tobj = { version = "3.2.3",features = ["async"]}

# async
tokio = { version = "1.20.1", default-features = false, features = ["fs", "macros", "signal","rt-multi-thread"] }
async-trait = "0.1.56"

# logging
env_logger = "0.9.0"
log = "0.4.17"

# build
cfg-if = "1.0.0"

# error handling
thiserror = "1.0.31"
color-eyre = "0.6.2"
tracing-error = "0.2.0"
color-spantrace = "0.2.0"

[build-dependencies]
anyhow = "1.0.58"
fs_extra = "1.2.0"
glob = "0.3.0"

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
