[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]
winit = "0.26.1"
wgpu = "0.13.1"
raw-window-handle = "0.4.0"

# tool
image = "0.24.3"
bytemuck = { version = "1.11.0", features = ["derive","extern_crate_alloc"] }
na = { version = "0.31.1", features = ["bytemuck"], package = "nalgebra" }
once_cell = "1.14.0"
dashmap = "5.3.4"
arrayvec = "0.7.2"

# async
tokio = { version = "1.20.1", default-features = false, features = ["fs", "macros", "signal","rt-multi-thread"] }
async-trait = "0.1.56"

# logging
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
tracing-error = "0.2.0"
colored = "2.0.0"

# build
cfg-if = "1.0.0"

# error handling
thiserror = "1.0.31"
color-eyre = "0.6.2"
color-spantrace = "0.2.0"

# time
chrono = "0.4.22"
time = { version = "0.3.12", features = ["macros", "local-offset"] }

# db
rocksdb = "0.19.0"

[build-dependencies]
anyhow = "1.0.58"
fs_extra = "1.2.0"
glob = "0.3.0"

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1