[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
winit = { version = "0.29", features = ["rwh_06"] }
wgpu = "0.19"
raw-window-handle = "0.6"

# tool
image = "0.24.3"
bytemuck = { version = "1", features = ["derive"] }
na = { version = "0.31.1", features = ["bytemuck"], package = "nalgebra" }
once_cell = "1"
dashmap = "5"
tobj = { version = "3.2.3",features = ["async"]}

# async
tokio = { version = "1.20.1", default-features = false, features = ["fs", "macros", "signal","rt-multi-thread"] }
async-trait = "0.1.56"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt", "ansi"] }
tracing-error = "0.2.0"
colored = "2"

# build
cfg-if = "1.0.0"

# error handling
thiserror = "1.0.31"
color-eyre = "0.6.2"
color-spantrace = "0.2.0"

# time
chrono = "0.4"
time = { version = "0.3", features = ["macros", "local-offset"] }

# db
sled = "1.0.0-alpha.121"

[build-dependencies]
anyhow = "1.0.58"
fs_extra = "1.2.0"
glob = "0.3.0"

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
